# xuezh

./: .gitignore  AGENTS.md  README.md  agents.md  devenv.nix  flake.nix  go.mod  go.sum  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: README.md  architecture.md  ci-strategy.md  cli-contract.md
migrations/: 0001_initial.sql  0002_add_review_due.sql  0003_add_events.sql  0004_add_srs_vectors.sql  migrations.go
schemas/: audio.assess.schema.json  audio.convert.schema.json  audio.process-voice.schema.json  audio.stt.schema.json  audio.tts.schema.json  content.cache.get.schema.json  content.cache.put.schema.json  dataset.import.schema.json  db.init.schema.json  doctor.schema.json  envelope.err.schema.json  envelope.ok.schema.json  event.list.schema.json  event.log.schema.json  gc.schema.json  report.due.schema.json  report.hsk.schema.json  report.mastery.schema.json  review.bury.schema.json  review.grade.schema.json  review.start.schema.json  snapshot.schema.json  srs.preview.schema.json  version.schema.json
scripts/: check.sh  seed_hsk30.py
specs/: audio-backends.md  datasets-format.md  errors.md  events.md  hsk-scope.md  id-scheme.md  implemented-commands.json  invariants.md  north-stars.md  out-of-scope.md  test-strategy.md  time.md  user-requirements.md
tests/: README.md  conftest.py  test_error_types.py
tickets/: README.md  T-00.md  T-01.md  T-01B.md  T-02.md  T-02B.md  T-03.md  T-04.md  T-04A.md  T-04B.md  T-05.md  T-06.md  T-06B.md  T-07.md  T-08.md  T-09.md  T-10.md  T-11.md  T-12.md  T-13.md  T-14.md  T-15.md  plan.yaml
(+116 files in other folders)
