[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xuezh"
version = "0.1.0"
description = "Local Chinese learning engine (ZFC / Unix-style) for use behind an LLM + Telegram bot"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "ulid-py>=1.1.0",
  "edge-tts>=6.0.0",
  "openai-whisper>=20231117",
  "azure-cognitiveservices-speech>=1.38.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
      "jsonschema>=4.22.0",
      "pyyaml>=6.0.1",
      "pytest-bdd>=7.2.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-setuptools",
]

[project.scripts]
xuezh = "xuezh.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
